deployment/app-kubernetes-manifests/guestbook-backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-guestbook-backend
  labels:
    app: python-guestbook
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-guestbook
      tier: backend
  template:
    metadata:
      labels:
        app: python-guestbook
        tier: backend
    spec:
      containers:
      - name: backend
        image: python-guestbook-backend:latest
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 8080
