deployment/app-kubernetes-manifests/guestbook-frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-guestbook-frontend
  labels:
    app: python-guestbook
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-guestbook
      tier: frontend
  template:
    metadata:
      labels:
        app: python-guestbook
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: python-guestbook-frontend:latest
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 8080
