deployment/app-kubernetes-manifests/guestbook-frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-guestbook-frontend
  labels:
    app: python-guestbook
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: python-guestbook
    tier: frontend
  ports:
  - port: 80
    targetPort: http-server
