deployment/app-kubernetes-manifests/guestbook-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-guestbook-frontend
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-guestbook-frontend
            port:
              number: 80
